# meta_rm

./: .gitignore  .gitkeep  CMakeLists.txt  CONTRIBUTING.md  README.md  lychee.toml
.github/workflows/: ci.yml
docs/case-studies/: README.md
examples/: inherit_chain.cpp
include/meta_rm/: meta_rm.hpp
scripts/: check-file-sizes.sh
tests/: CMakeLists.txt  primitives.cpp  relation_inherit.cpp  relation_root.cpp  smoke.cpp
